<resources>
    <string name="app_name">My Servey App</string>
    <string name="textview">TextView</string>
    <string name="textviewname">TextView</string>
    <string name="add_detail">Add detail</string>
    <string name="view_detail">View detail</string>
    <string name="update_detail">Update detail</string>
    <string name="delete_detail">Delete Detail</string>
    <string name="back">Back</string>
    <string name="back1">Back</string>
    <string name="question_one_view_details">Question One View Details</string>
    <string name="button">Button</string>
    <string name="goback">Back</string>
    <string name="Back">Go Back</string>


    <array name="district">
        <item>Ampara</item>
        <item>Anuradapura</item>
        <item>Badulla</item>
        <item>Batticaloa</item>
        <item>Colombo</item>
        <item>Galle</item>
        <item>Gampaha</item>
        <item>Hambanthota</item>
        <item>Jaffna</item>
        <item>Kalutara</item>
        <item>Kandy</item>
        <item>Kegalle</item>
        <item>Kilinochchi</item>
        <item>Kurunegala</item>
        <item>Mannar</item>
        <item>Matale</item>
        <item>Matara</item>
        <item>Moneragala</item>
        <item>Mullaitivu</item>
        <item>Nuwara Eliya</item>
        <item>Plonnaruwa</item>
        <item>Puttalam</item>
        <item>Rathnapura</item>
        <item>Trincomalee</item>
        <item>Vavuniya</item>
    </array>
</resources>
